--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
   "name": "syg-tabs",
-  "version": "1.0.1",
+  "version": "1.1.1",
   "description": "Simple tab script. シンプルなタブ",
-  "main": "syg-tabs.js",
+  "main": "dist/syg-tabs.js",
+  "module": "dist/syg-tabs.es.js",
+  "moduleName": "syg-tabs",
   "private": false,
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sygnas/syg-tabs"
+    "url": "https://github.com/sygnas/syg-tabs.git"
   },
   "scripts": {
-    "test": ""
+    "start": "npm run watch",
+    "watch": "NODE_ENV=example rollup -w -c rollup.config.js",
+    "dev": "NODE_ENV=development rollup -c rollup.config.js",
+    "prod": "NODE_ENV=production rollup -c rollup.config.js",
+    "production": "rm -rf dist && npm run dev && npm run prod",
+    "lint": "eslint src"
   },
   "keywords": [
     "javascript",
@@ -18,6 +25,17 @@
   ],
   "author": "Hiroshi Fukuda <info.sygnas@gmail.com>",
   "license": "MIT",
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.3",
+    "babel-preset-es2015-rollup": "^3.0.0",
+    "eslint": "^4.12.1",
+    "rollup": "^0.52.0",
+    "rollup-plugin-babel": "^3.0.2",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-sourcemaps": "^0.4.2",
+    "rollup-plugin-uglify": "^2.0.1",
+    "rollup-watch": "^4.3.1"
+  },
   "dependencies": {}
 }
