--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sygnas/tabs",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Simple tab script. シンプルなタブ",
   "main": "dist/tabs.js",
   "module": "dist/tabs.es.js",
@@ -27,15 +27,19 @@
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.3",
-    "babel-preset-es2015-rollup": "^3.0.0",
-    "eslint": "^4.12.1",
-    "rollup": "^0.52.0",
-    "rollup-plugin-babel": "^3.0.2",
-    "rollup-plugin-node-resolve": "^3.0.0",
+    "babel-eslint": "^8.2.1",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-runtime": "^6.26.0",
+    "eslint": "^4.17.0",
+    "rollup": "^0.55.3",
+    "rollup-plugin-babel": "^3.0.3",
+    "rollup-plugin-commonjs": "^8.3.0",
+    "rollup-plugin-node-resolve": "^3.0.2",
     "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-uglify": "^2.0.1",
-    "rollup-watch": "^4.3.1"
+    "rollup-plugin-uglify": "^3.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+  }
 }
